--- a/SourceCode/MobilePhoneSalesManagement/ServerApp.PL/appsettings.json
+++ b/SourceCode/MobilePhoneSalesManagement/ServerApp.PL/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-U8EBGP7\\D;Database=MobilePhoneSalesDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=MobilePhoneSalesDb2;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "JWT": {
     "Audience": "User",
